# presentations

./: .gitmodules  README.md
2017-11-29/Examples/: alias.c  alias.ll  alias.txt  cfg.c  cfg.ll  hello.c  hello.ll  helloopt.ll  helloopt.s  licm.c  licm.ll  licmopt.ll  loops.c  loops.ll  loops.txt  loopsmem2reg.ll  mem.c  mem.ll  memopt.ll  polly.c  preindvar.c  preindvar.ll  preindvaropt.ll  scop.txt
2017-12-13/: README.md  go-for-embedded.slide  setup-gopath
2017-12-13/gopath/src/code/c-example/: c-example.c  c-example.go
2017-12-13/gopath/src/code/cgo/: foo.c  foo.h  main.go
2017-12-13/gopath/src/code/fooer/: fooer.go
2017-12-13/gopath/src/code/smaller-print/: print.go
2017-12-13/gopath/src/code/struct/: struct.go
2017-12-13/gopath/src/code/sysnum/: sysnum_64.go
2017-12-13/gopath/src/code/test-example/: foo.go  foo_bench_test.go  foo_test.go
2017-12-13/gopath/src/code/withtestkeys/: testkeys.go
2018-03-21/LiveCoding/: CMakeLists.txt
2018-03-21/LiveCoding/Implementation/: File.cpp  File.hpp  FileInterface.hpp  LoggerToFile.cpp  LoggerToFile.hpp  Porter.cpp  Porter.hpp  Processor.cpp  Processor.hpp  app.cpp
2018-03-21/LiveCoding/Tests/: LoggerToFileTests.cpp  MockFile.hpp  PorterTests.cpp  ProcessorTests.cpp
2019-02-27/examples/: README.md  fedora-setup
2019-02-27/examples/seccomp/: Makefile  prog.pfc  runner.c
2019-02-27/examples/seccomp/genprog/: go.mod  main.go
2019-02-27/examples/tc-bpf/: Makefile  hello.c
2019-02-27/examples/tcp-trace/: Makefile  client.c  dns-which.py
2019-02-27/examples/usdt/: Makefile  demo.c
2021-11-24/: assertions  cehug-demo-model.json  cehug-demo-model.model  setup
2023-09-13/: PEM.ipynb  main.ipynb
2023-09-13/esp32c3_sample/: sdkconfig
2023-09-13/esp32c3_sample/main/: blink_example_main.c
2023-09-13/rendered_notebooks/: PEM.html  PEM.md  main.html  main.md  main.rst
2024-01-24/: README.md
